Switch to ArrayList for performance (close #182)